--- a/.github/ISSUE_TEMPLATE/4_feature_request_internal.yml
+++ b/.github/ISSUE_TEMPLATE/4_feature_request_internal.yml
@@ -1,4 +1,4 @@
-name: ⚡️ Feature request - Internal
+name: ⚡️ Feature Request Internal
 description: New Feature Request by Internal Betarena Team
 title: "[FEATURE]: "
 labels: ["🌟 [A] enhancement", "🎨 Frontend"]
