--- a/.github/ISSUE_TEMPLATE/3_feature_request_general.yml
+++ b/.github/ISSUE_TEMPLATE/3_feature_request_general.yml
@@ -1,4 +1,4 @@
-name: ⚡️ Feature request
+name: ➕ Feature Request
 description: Suggest an idea for this project
 title: "[FEATURE]: "
 labels: ["🌟 [A] enhancement", "🎨 Frontend"]
