--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -1,4 +1,4 @@
-name: 🐞 Bug Report
+name: 🐛 Bug Report
 description: Create a report about something that is not working
 title: "[Bug]: "
 labels: ["🐞 [A] bug", "🎨 Frontend"]
