--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -34,10 +34,10 @@ body:
 
 - type: checkboxes
   attributes:
-    label: What `environment` is the bug/issue detected in.
+    label: What environment is the bug/issue detected in.
     description: Please specify the target Scores Platform issue can be found. Note, `DEV` is reserved for internal testers.
     options:
-      - label: Production
+      - label: Production (scores.betarena.com)
         required: false
       - label: Development
         required: false
@@ -62,7 +62,7 @@ body:
 - type: checkboxes
   id: devices
   attributes:
-    label: What device are you seeing the problem on?
+    label: What device/platform can the problem be seen?
     options:
       - label: 📱 Mobile
         required: false
@@ -75,8 +75,8 @@ body:
   attributes:
     label: Steps To Reproduce
     description: |
+    
       For example:
-
       - Navigate here, [link] and click on [this].
       - Login as a user, and click [this]
   validations:
@@ -94,6 +94,7 @@ body:
   attributes:
     label: Anything else?
     description: |
+    
       - First detected on:
       - Platform language:
       - Geo Location:
@@ -101,5 +102,6 @@ body:
       Links? References? Anything that will give us more context about the issue you are encountering!
 
       Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+      
   validations:
     required: false
