--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -1,12 +1,15 @@
-name: 🐞 Bug Report
+name: 🐛 Bug Report
 description: Create a report about something that is not working
 title: "[Bug]: "
 labels: ["🐞 [A] bug", "🎨 Frontend"]
+projects: ["Betarena Scores"]
 body:
 
 - type: markdown
   attributes:
     value: |
+      ![Static Badge](https://img.shields.io/badge/issue-%F0%9F%90%9E_bug-black?logo=github&color=%23EE4B2B&cacheSeconds=0)
+      
       Please keep in mind that the GitHub issue tracker is not intended as a general support forum, but for reporting **non-security** bugs and feature requests.
 
 - type: checkboxes
@@ -34,10 +37,10 @@ body:
 
 - type: checkboxes
   attributes:
-    label: What `environment` is the bug/issue detected in.
+    label: What environment is the bug/issue detected in.
     description: Please specify the target Scores Platform issue can be found. Note, `DEV` is reserved for internal testers.
     options:
-      - label: Production
+      - label: Production (scores.betarena.com)
         required: false
       - label: Development
         required: false
@@ -62,21 +65,21 @@ body:
 - type: checkboxes
   id: devices
   attributes:
-    label: What device are you seeing the problem on?
+    label: What device/platform can the problem be seen?
     options:
-      - label: Mobile
+      - label: 📱 Mobile
         required: false
-      - label: Tablet
+      - label: 💻 Tablet
         required: false
-      - label: Laptop/Desktop
+      - label: 🖥️ Laptop/Desktop
         required: false
 
 - type: textarea
   attributes:
     label: Steps To Reproduce
     description: |
+    
       For example:
-
       - Navigate here, [link] and click on [this].
       - Login as a user, and click [this]
   validations:
@@ -94,6 +97,7 @@ body:
   attributes:
     label: Anything else?
     description: |
+    
       - First detected on:
       - Platform language:
       - Geo Location:
@@ -101,5 +105,6 @@ body:
       Links? References? Anything that will give us more context about the issue you are encountering!
 
       Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+      
   validations:
     required: false
