--- a/.github/ISSUE_TEMPLATE/3_feature_request_general.yml
+++ b/.github/ISSUE_TEMPLATE/3_feature_request_general.yml
@@ -1,4 +1,4 @@
-name: ⚡️ Feature request
+name: ➕ Feature Request
 description: Suggest an idea for this project
 title: "[FEATURE]: "
 labels: ["🌟 [A] enhancement", "🎨 Frontend"]
@@ -7,7 +7,9 @@ body:
 - type: markdown
   attributes:
     value: |
-      Please create a new Feature Request by filling out this form.
+      ![Static Badge](https://img.shields.io/badge/issue-%E2%9E%95_feature_general-black?logo=github&color=%230096FF%09&cacheSeconds=0)
+      
+      Please, fill out this form to submit a new `Feature Request` for the Betarena - Scores Platform.
 
 - type: checkboxes
   attributes:
@@ -27,7 +29,7 @@ body:
 
 - type: textarea
   attributes:
-    label: Describe the solution you'd like
+    label: Feature Request description goes here.
     description: |
       A clear and concise description of what you want to happen. Include any alternative solutions you've considered.
   validations:
