--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"staging": "npm run dev -- --mode staging",
 		"build": "vite build",
 		"preview": "vite preview --host --port 4173",
-		"quick:preview:local:spin": "vite build && npm run preview",
+		"preview:1-click:spin": "npm run build && npm run preview",
     "start": "node build/index.js",
 		"start:docker": "node server-docker.js",
 		"start:heroku": "node server-heroku.js",
