--- a/.github/ISSUE_TEMPLATE/4_feature_request_internal.yml
+++ b/.github/ISSUE_TEMPLATE/4_feature_request_internal.yml
@@ -1,6 +1,6 @@
-name: ⚡️ Feature Request Internal
-description: New Feature Request by Internal Betarena Team
-title: "[FEATURE-I]: "
+name: ⚡️ Feature Request Internal (Widget)
+description: New Feature Request (Widget) by Internal Betarena Team
+title: "[FEATURE-I-W]: "
 labels: ["🌟 [A] enhancement", "🎨 Frontend"]
 projects: ["Betarena Scores"]
 body:
@@ -10,7 +10,7 @@ body:
     value: |
       ![Static Badge](https://img.shields.io/badge/issue-%E2%9A%A1%EF%B8%8F_feature_internal-black?logo=github&color=%2300FFFF&cacheSeconds=0)
       
-      Please, fill out this form to submit a new `Feature Request` for the Betarena - Scores Platform as an Internal Betarena Team member.
+      Please, fill out this form to submit a new `Feature Request` of type `Widget` for the Betarena - Scores Platform as an Internal Betarena Team member.
 
 - type: checkboxes
   attributes:
