--- a/.github/ISSUE_TEMPLATE/3_feature_request_general.yml
+++ b/.github/ISSUE_TEMPLATE/3_feature_request_general.yml
@@ -1,5 +1,5 @@
 name: ➕ Feature Request
-description: Suggest an idea and/or solution for Betarena - Scores Platform.
+description: Suggest an idea, feature and/or solution for Betarena - Scores Platform.
 title: "[FEATURE]: "
 labels: ["🌟 [A] enhancement", "🎨 Frontend"]
 body:
