--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"firebase": "^9.20.0",
 		"graphql-request": "^5.0.0",
 		"heroku-ssl-redirect": "^0.1.1",
+		"ibantools": "^4.3.3",
 		"ioredis": "^5.3.2",
 		"moralis": "^2.18.4",
 		"request-ip": "^3.3.0",
