--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
 	"name": "betarena-scores-platform",
 	"description": "Betarena Official Scores Platform (PWA)",
 	"version": "1.1.1",
-	"engines": {
+	"engines":
+  {
 		"npm": "8.19.1",
 		"node": "16.17.0"
 	},
-	"scripts": {
+	"scripts":
+  {
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -33,7 +35,8 @@
 		"test:unit": "vitest",
 		"coverage": "vitest run --coverage"
 	},
-	"devDependencies": {
+	"devDependencies":
+  {
 		"@playwright/test": "^1.36.1",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.22.3",
@@ -61,7 +64,8 @@
 		"vitest": "^0.33.0"
 	},
 	"type": "module",
-	"dependencies": {
+	"dependencies":
+  {
 		"@betarena/scores-lib": "^1.3.4",
 		"@lukeed/uuid": "^2.0.1",
 		"@metamask/sdk": "^0.1.0",
