--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"build": "vite build",
 		"preview": "vite preview --host --port 4173",
 		"preview:1-click:spin": "make preview-1-click-spin",
-    "start": "node build/index.js",
+		"start": "node build/index.js",
 		"start:docker": "node server-docker.js",
 		"start:heroku": "node server-heroku.js",
 		"@betarena/scores-lib:pull:next": "npm i @betarena/scores-lib@latest",
@@ -39,6 +39,8 @@
 		"@sveltejs/kit": "^1.22.3",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/svelte": "^4.0.3",
+		"@types/masonry-layout": "^4.2.5",
+		"@types/ua-parser-js": "^0.7.36",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"cross-env": "^7.0.3",
@@ -74,6 +76,7 @@
 		"colorthief": "^2.4.0",
 		"compression": "^1.7.4",
 		"cookie": "^0.5.0",
+		"device-detector-js": "^3.0.3",
 		"dotenv": "^16.3.1",
 		"express": "^4.17.3",
 		"express-sslify": "^1.2.0",
@@ -81,8 +84,10 @@
 		"graphql-request": "^5.0.0",
 		"heroku-ssl-redirect": "^0.1.1",
 		"ioredis": "^5.3.2",
+		"masonry-layout": "^4.2.2",
 		"moralis": "^2.18.4",
 		"request-ip": "^3.3.0",
+		"ua-parser-js": "^1.0.35",
 		"unique-username-generator": "^1.1.3",
 		"vite-plugin-css-injected-by-js": "^3.2.1",
 		"vite-plugin-preload": "^0.3.1",
