--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"debug:bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
 		"debug:preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
 		"dev": "vite dev --host --port 3050",
+		"dev:1-click:spin": "make dev-1-click-spin",
 		"dev:docker": "vite dev --host --port 5055",
 		"dev:docker:up": "docker-compose -f docker-compose.dev.yml up",
 		"staging": "npm run dev -- --mode staging",
