--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
 	"name": "betarena-scores-platform",
 	"description": "Betarena Official Scores Platform (PWA)",
 	"version": "1.1.1",
-	"engines":
-  {
+	"engines": {
 		"npm": "8.19.1",
 		"node": "16.17.0"
 	},
-	"scripts":
-  {
+	"scripts": {
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -25,7 +23,7 @@
 		"build": "vite build",
 		"preview": "vite preview --host --port 4173",
 		"preview:1-click:spin": "make preview-1-click-spin",
-    "start": "node build/index.js",
+		"start": "node build/index.js",
 		"start:docker": "node server-docker.js",
 		"start:heroku": "node server-heroku.js",
 		"@betarena/scores-lib:pull:next": "npm i @betarena/scores-lib@latest",
@@ -35,8 +33,7 @@
 		"test:unit": "vitest",
 		"coverage": "vitest run --coverage"
 	},
-	"devDependencies":
-  {
+	"devDependencies": {
 		"@playwright/test": "^1.36.1",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.22.3",
@@ -78,6 +75,7 @@
 		"compression": "^1.7.4",
 		"cookie": "^0.5.0",
 		"dotenv": "^16.3.1",
+		"email-validator": "^2.0.4",
 		"express": "^4.17.3",
 		"express-sslify": "^1.2.0",
 		"firebase": "^9.20.0",
