--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
 	"name": "betarena-scores-platform",
 	"description": "Betarena Official Scores Platform (PWA)",
 	"version": "1.1.1",
-	"engines":
-  {
+	"engines": {
 		"npm": "8.19.1",
 		"node": "16.17.0"
 	},
-	"scripts":
-  {
+	"scripts": {
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -25,7 +23,7 @@
 		"build": "vite build",
 		"preview": "vite preview --host --port 4173",
 		"preview:1-click:spin": "make preview-1-click-spin",
-    "start": "node build/index.js",
+		"start": "node build/index.js",
 		"start:docker": "node server-docker.js",
 		"start:heroku": "node server-heroku.js",
 		"@betarena/scores-lib:pull:next": "npm i @betarena/scores-lib@latest",
@@ -35,8 +33,7 @@
 		"test:unit": "vitest",
 		"coverage": "vitest run --coverage"
 	},
-	"devDependencies":
-  {
+	"devDependencies": {
 		"@playwright/test": "^1.36.1",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.22.3",
@@ -64,9 +61,8 @@
 		"vitest": "^0.33.0"
 	},
 	"type": "module",
-	"dependencies":
-  {
-		"@betarena/scores-lib": "^1.3.4",
+	"dependencies": {
+		"@betarena/scores-lib": "^1.4.6",
 		"@lukeed/uuid": "^2.0.1",
 		"@metamask/sdk": "^0.1.0",
 		"@moralisweb3/client-firebase-auth-utils": "^2.18.4",
@@ -79,11 +75,13 @@
 		"compression": "^1.7.4",
 		"cookie": "^0.5.0",
 		"dotenv": "^16.3.1",
+		"email-validator": "^2.0.4",
 		"express": "^4.17.3",
 		"express-sslify": "^1.2.0",
 		"firebase": "^9.20.0",
 		"graphql-request": "^5.0.0",
 		"heroku-ssl-redirect": "^0.1.1",
+		"ibantools": "^4.3.3",
 		"ioredis": "^5.3.2",
 		"moralis": "^2.18.4",
 		"request-ip": "^3.3.0",
