--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"debug:bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
 		"debug:preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
 		"dev": "vite dev --host --port 3050",
+		"dev:1-click:spin": "make dev-1-click-spin",
 		"dev:docker": "vite dev --host --port 5055",
 		"dev:docker:up": "docker-compose -f docker-compose.dev.yml up",
 		"staging": "npm run dev -- --mode staging",
@@ -39,6 +40,8 @@
 		"@sveltejs/kit": "^1.22.3",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/svelte": "^4.0.3",
+		"@types/masonry-layout": "^4.2.5",
+		"@types/ua-parser-js": "^0.7.36",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"cross-env": "^7.0.3",
@@ -74,6 +77,7 @@
 		"colorthief": "^2.4.0",
 		"compression": "^1.7.4",
 		"cookie": "^0.5.0",
+		"device-detector-js": "^3.0.3",
 		"dotenv": "^16.3.1",
 		"email-validator": "^2.0.4",
 		"express": "^4.17.3",
@@ -83,9 +87,13 @@
 		"heroku-ssl-redirect": "^0.1.1",
 		"ibantools": "^4.3.3",
 		"ioredis": "^5.3.2",
+		"masonry-layout": "^4.2.2",
 		"moralis": "^2.18.4",
 		"request-ip": "^3.3.0",
+		"ua-parser-js": "^1.0.35",
 		"unique-username-generator": "^1.1.3",
+		"vite-plugin-css-injected-by-js": "^3.2.1",
+		"vite-plugin-preload": "^0.3.1",
 		"xml-formatter": "^2.6.1"
 	}
 }
