--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"debug:bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
 		"debug:preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
 		"dev": "vite dev --host --port 3050",
+		"dev:1-click:spin": "make dev-1-click-spin",
 		"dev:docker": "vite dev --host --port 5055",
 		"dev:docker:up": "docker-compose -f docker-compose.dev.yml up",
 		"staging": "npm run dev -- --mode staging",
 		"build": "vite build",
 		"preview": "vite preview --host --port 4173",
-		"quick:preview:local:spin": "vite build && npm run preview",
+		"preview:1-click:spin": "make preview-1-click-spin",
+		"start": "node build/index.js",
 		"start:docker": "node server-docker.js",
 		"start:heroku": "node server-heroku.js",
 		"@betarena/scores-lib:pull:next": "npm i @betarena/scores-lib@latest",
@@ -38,6 +40,8 @@
 		"@sveltejs/kit": "^1.22.3",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/svelte": "^4.0.3",
+		"@types/masonry-layout": "^4.2.5",
+		"@types/ua-parser-js": "^0.7.36",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"cross-env": "^7.0.3",
@@ -61,7 +65,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@betarena/scores-lib": "^1.3.4",
+		"@betarena/scores-lib": "^1.4.6",
 		"@lukeed/uuid": "^2.0.1",
 		"@metamask/sdk": "^0.1.0",
 		"@moralisweb3/client-firebase-auth-utils": "^2.18.4",
@@ -73,16 +77,23 @@
 		"colorthief": "^2.4.0",
 		"compression": "^1.7.4",
 		"cookie": "^0.5.0",
+		"device-detector-js": "^3.0.3",
 		"dotenv": "^16.3.1",
+		"email-validator": "^2.0.4",
 		"express": "^4.17.3",
 		"express-sslify": "^1.2.0",
 		"firebase": "^9.20.0",
 		"graphql-request": "^5.0.0",
 		"heroku-ssl-redirect": "^0.1.1",
+		"ibantools": "^4.3.3",
 		"ioredis": "^5.3.2",
+		"masonry-layout": "^4.2.2",
 		"moralis": "^2.18.4",
 		"request-ip": "^3.3.0",
+		"ua-parser-js": "^1.0.35",
 		"unique-username-generator": "^1.1.3",
+		"vite-plugin-css-injected-by-js": "^3.2.1",
+		"vite-plugin-preload": "^0.3.1",
 		"xml-formatter": "^2.6.1"
 	}
 }
