--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
 		"express-sslify": "^1.2.0",
 		"firebase": "^9.20.0",
 		"graphql-request": "^5.0.0",
+		"graphql-subscriptions-client": "^0.16.4",
 		"heroku-ssl-redirect": "^0.1.1",
 		"ibantools": "^4.3.3",
 		"ioredis": "^5.3.2",
