fix: bug with node_modules using cache (dev);

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
 		"debug:bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
 		"debug:preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
-		"dev": "vite dev --host --port 3050",
+		"dev": "vite dev --host --port 3050 --force",
 		"dev:1-click:spin": "make dev-1-click-spin",
 		"dev:docker": "vite dev --host --port 5055",
 		"dev:docker:up": "docker-compose -f docker-compose.dev.yml up",
