--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
 		"debug:bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
 		"debug:preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
-		"dev": "vite dev --host --port 3050",
+		"dev": "vite dev --host --port 3050 --force",
 		"dev:1-click:spin": "make dev-1-click-spin",
 		"dev:docker": "vite dev --host --port 5055",
 		"dev:docker:up": "docker-compose -f docker-compose.dev.yml up",
@@ -65,7 +65,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@betarena/scores-lib": "^1.4.6",
+		"@betarena/scores-lib": "^1.6.15",
 		"@lukeed/uuid": "^2.0.1",
 		"@metamask/sdk": "^0.1.0",
 		"@moralisweb3/client-firebase-auth-utils": "^2.18.4",
@@ -84,6 +84,7 @@
 		"express-sslify": "^1.2.0",
 		"firebase": "^9.20.0",
 		"graphql-request": "^5.0.0",
+		"graphql-subscriptions-client": "^0.16.4",
 		"heroku-ssl-redirect": "^0.1.1",
 		"ibantools": "^4.3.3",
 		"ioredis": "^5.3.2",
