--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,8 @@
 	// Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
 
 	// List of extensions which should be recommended for users of this workspace.
-	"recommendations": [
+	"recommendations":
+  [
     "fivethree.vscode-svelte-snippets",
     "ardenivanov.svelte-intellisense",
     "wayou.vscode-todo-highlight",
@@ -16,7 +17,8 @@
     "pranaygp.vscode-css-peek"
   ],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
-	"unwantedRecommendations": [
-		
+	"unwantedRecommendations":
+  [
+
 	]
 }
