--- a/package.json
+++ b/package.json
@@ -2,69 +2,45 @@
 	"name": "betarena-scores-platform",
 	"description": "Betarena Official Scores Platform (PWA)",
 	"version": "2.1.4",
-	"engines": {
+	"type": "module",
+	"engines":
+  {
 		"npm": "8.19.1",
 		"node": "16.17.0"
 	},
-	"scripts": {
+	"scripts":
+  {
+    "start": "node build/index.js",
+    "build": "vite build",
 		"test": "npm run test:integration && npm run test:unit",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"format:src": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ./src",
-		"debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
-		"debug:bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
-		"debug:preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
-		"dev": "vite dev --host --port 3050 --force",
-		"dev:1-click:spin": "make dev-1-click-spin",
-		"dev:docker": "vite dev --host --port 5055",
-		"dev:docker:up": "docker-compose -f docker-compose.dev.yml up",
-		"staging": "npm run dev -- --mode staging",
-		"build": "vite build",
-		"preview": "vite preview --host --port 4173",
-		"preview:1-click:spin": "make preview-1-click-spin",
-		"start": "node build/index.js",
-		"start:docker": "node server-docker.js",
-		"start:heroku": "node server-heroku.js",
-		"@betarena/scores-lib:pull:next": "npm i @betarena/scores-lib@latest",
-		"@betarena/scores-lib:link": "npm link @betarena/scores-lib",
-		"test:integration": "playwright test",
-		"test:integration-ui": "playwright test --ui",
-		"test:unit": "vitest",
+		"svelte-check": "svelte-check --tsconfig ./tsconfig.json",
+		"svelte-check::watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"prettier::eslint::lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"prettier::format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"prettier::format::src": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ./src",
+		"sveltekit::debug": "cross-env NODE_OPTIONS='--inspect' vite dev --host --port 3050",
+		"sveltekit::debug::bull": "cross-env NODE_DEBUG='bull' vite preview --host --port 5000",
+		"sveltekit::debug::preview": "cross-env NODE_OPTIONS='--inspect' vite preview --host --port 4173",
+		"sveltekit::dev": "vite dev --host --port 3050 --force",
+		"sveltekit::dev::1-click::spin": "make dev-1-click-spin",
+		"sveltekit::dev::docker": "vite dev --host --port 5055",
+		"sveltekit::dev::docker:up": "docker-compose -f docker-compose.dev.yml up",
+		"sveltekit::staging": "npm run sveltekit::dev -- --mode staging",
+		"sveltekit::build": "vite build",
+		"sveltekit::preview": "vite preview --host --port 4173",
+		"sveltekit::preview::1-click::spin": "make preview-1-click-spin",
+		"sveltekit::start": "node build/index.js",
+		"sveltekit::start::docker": "node server-docker.js",
+		"sveltekit::start::heroku": "node server-heroku.js",
+		"pkg::@betarena/scores-lib::pull::next": "npm i @betarena/scores-lib@latest",
+		"pkg::@betarena/scores-lib::link": "npm link @betarena/scores-lib",
+		"test::integration": "playwright test",
+		"test::integration-ui": "playwright test --ui",
+		"test::unit": "vitest",
 		"coverage": "vitest run --coverage"
 	},
-	"devDependencies": {
-		"@playwright/test": "^1.36.1",
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/kit": "^1.22.3",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/svelte": "^4.0.3",
-		"@types/masonry-layout": "^4.2.5",
-		"@types/ua-parser-js": "^0.7.36",
-		"@typescript-eslint/eslint-plugin": "^5.59.1",
-		"@typescript-eslint/parser": "^5.59.1",
-		"cross-env": "^7.0.3",
-		"cypress": "^12.17.1",
-		"eslint": "^8.39.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-svelte": "^2.30.0",
-		"jsdom": "^22.1.0",
-		"node-fetch": "^3.3.1",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"svelte-preprocess": "^5.0.3",
-		"svelte-seo": "^1.5.3",
-		"tslib": "^2.5.0",
-		"typescript": "^5.1.6",
-		"vite": "^4.4.4",
-		"vite-plugin-compression": "^0.5.1",
-		"vitest": "^0.33.0"
-	},
-	"type": "module",
-	"dependencies": {
+  "dependencies":
+  {
 		"@betarena/scores-lib": "^1.6.18",
 		"@lukeed/uuid": "^2.0.1",
 		"@metamask/sdk": "^0.1.0",
@@ -96,5 +72,35 @@
 		"vite-plugin-css-injected-by-js": "^3.2.1",
 		"vite-plugin-preload": "^0.3.1",
 		"xml-formatter": "^2.6.1"
+	},
+	"devDependencies":
+  {
+		"@playwright/test": "^1.36.1",
+		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/kit": "^1.22.3",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/svelte": "^4.0.3",
+		"@types/masonry-layout": "^4.2.5",
+		"@types/ua-parser-js": "^0.7.36",
+		"@typescript-eslint/eslint-plugin": "^5.59.1",
+		"@typescript-eslint/parser": "^5.59.1",
+		"cross-env": "^7.0.3",
+		"cypress": "^12.17.1",
+		"eslint": "^8.39.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-svelte": "^2.30.0",
+		"jsdom": "^22.1.0",
+		"node-fetch": "^3.3.1",
+		"prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"svelte-preprocess": "^5.0.3",
+		"svelte-seo": "^1.5.3",
+		"tslib": "^2.5.0",
+		"typescript": "^5.1.6",
+		"vite": "^4.4.4",
+		"vite-plugin-compression": "^0.5.1",
+		"vitest": "^0.33.0"
 	}
 }
