--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
 	"name": "betarena-scores-platform",
 	"description": "Betarena Official Scores Platform (PWA)",
-	"version": "2.1.4",
+	"version": "2.1.5",
 	"type": "module",
-	"engines":
-  {
+	"engines": {
 		"npm": "8.19.1",
 		"node": "16.17.0"
 	},
-	"scripts":
-  {
-    "start": "node build/index.js",
-    "build": "vite build",
+	"scripts": {
+		"start": "node build/index.js",
+		"build": "vite build",
 		"test": "npm run test:integration && npm run test:unit",
 		"svelte-check": "svelte-check --tsconfig ./tsconfig.json",
 		"svelte-check::watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -39,8 +37,7 @@
 		"test::unit": "vitest",
 		"coverage": "vitest run --coverage"
 	},
-  "dependencies":
-  {
+	"dependencies": {
 		"@betarena/scores-lib": "^1.6.18",
 		"@lukeed/uuid": "^2.0.1",
 		"@metamask/sdk": "^0.1.0",
@@ -73,8 +70,7 @@
 		"vite-plugin-preload": "^0.3.1",
 		"xml-formatter": "^2.6.1"
 	},
-	"devDependencies":
-  {
+	"devDependencies": {
 		"@playwright/test": "^1.36.1",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.22.3",
