--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
-		"@betarena/scores-lib": "^1.6.22",
+		"@betarena/scores-lib": "^1.7.2",
 		"@lukeed/uuid": "^2.0.1",
 		"@metamask/sdk": "^0.1.0",
 		"@moralisweb3/client-firebase-auth-utils": "^2.18.4",
@@ -61,6 +61,7 @@
 		"heroku-ssl-redirect": "^0.1.1",
 		"ibantools": "^4.3.3",
 		"ioredis": "^5.3.2",
+		"lz-string": "^1.5.0",
 		"masonry-layout": "^4.2.2",
 		"moralis": "^2.18.4",
 		"request-ip": "^3.3.0",
