--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	},
 	"scripts": {
 		"start": "node build/index.js",
-		"build": "vite build",
+		"build": "VITE_SCORES_PKG_VERSION=v.$(npm pkg get version --workspaces=false | tr -d \\\") vite build",
 		"test": "npm run test:integration && npm run test:unit",
 		"svelte-check": "svelte-check --tsconfig ./tsconfig.json",
 		"svelte-check::watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -45,7 +45,9 @@
 		"@moralisweb3/client-firebase-evm-auth": "^2.18.4",
 		"@playwright/test": "^1.36.1",
 		"@sentry/browser": "^7.49.0",
+		"@sentry/sveltekit": "^7.73.0",
 		"@sentry/tracing": "^7.49.0",
+		"@types/node": "^20.8.5",
 		"@walletconnect/web3-provider": "^1.8.0",
 		"colorthief": "^2.4.0",
 		"compression": "^1.7.4",
@@ -65,6 +67,7 @@
 		"masonry-layout": "^4.2.2",
 		"moralis": "^2.18.4",
 		"request-ip": "^3.3.0",
+		"table": "^6.8.1",
 		"ua-parser-js": "^1.0.35",
 		"unique-username-generator": "^1.1.3",
 		"vite-plugin-css-injected-by-js": "^3.2.1",
