--- a/.github/workflows/pr-main-tag.yml
+++ b/.github/workflows/pr-main-tag.yml
@@ -1,12 +1,12 @@
-# -----------------------
-# NOTE:
-# This Github Action is used to:
-# - Increase (Bump) NPM project version (0.0.1 -> 0.0.2)
-# - Reset origin/dev branch to be in-line with main after PR
-# - Create a Release of new TAG
-# TODO:
-# - https://stackoverflow.com/questions/39206082/npm-version-to-add-alpha-postfix
-# -----------------------
+# ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+# ▓▓ NOTE:
+# ▓▓ This Github Action is used to:
+# ▓▓ - Increase (Bump) NPM project version (0.0.1 -> 0.0.2)
+# ▓▓ - Reset origin/dev branch to be in-line with main after PR
+# ▓▓ - Create a Release of new TAG
+# ▓▓ TODO:
+# ▓▓ - https://stackoverflow.com/questions/39206082/npm-version-to-add-alpha-postfix
+# ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
 
 name: NPM - Bump, publish, reset, release
 
@@ -15,22 +15,6 @@ env:
   PATCH_WORDING: 'PATCH,patch,fix,hotfix,add'
   MINOR_WORDING: 'MINOR,minor,feat'
   MAJOR_WORDING: 'MAJOR,major,BREAKING'
-  PORT: ${{ secrets.PORT }}
-  VITE_FIREBASE_DB_PROJECT_ID: ${{ secrets.VITE_FIREBASE_DB_PROJECT_ID }}
-  VITE_REDIS_PORT: ${{ secrets.VITE_REDIS_PORT }}
-  VITE_REDIS_HOST: ${{ secrets.VITE_REDIS_HOST }}
-  VITE_FIREBASE_DB_STORAGE_BUCKET: ${{ secrets.VITE_FIREBASE_DB_STORAGE_BUCKET }}
-  VITE_DISCORD_OAUTH_URL: ${{ secrets.VITE_DISCORD_OAUTH_URL }}
-  VITE_HASURA_DB_TOKEN: ${{ secrets.VITE_HASURA_DB_TOKEN }}
-  VITE_REDIS_BULL_DB: ${{ secrets.VITE_REDIS_BULL_DB }}
-  VITE_REDIS_CACHE_DB: ${{ secrets.VITE_REDIS_CACHE_DB }}
-  VITE_PROD_LOGS: ${{ secrets.VITE_PROD_LOGS }}
-  VITE_FIREBASE_DB_API_KEY: ${{ secrets.VITE_FIREBASE_DB_API_KEY }}
-  VITE_HASURA_DB_URL: ${{ secrets.VITE_HASURA_DB_URL }}
-  VITE_REDIS_PASS: ${{ secrets.VITE_REDIS_PASS }}
-  VITE_FIREBASE_DB_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_DB_AUTH_DOMAIN }}
-  VITE_FIREBASE_DB_DATABASE_URL: ${{ secrets.VITE_FIREBASE_DB_DATABASE_URL }}
-  SENTRY_ENVIRONMENT: ${{ secrets.SENTRY_ENVIRONMENT }}
 
 'on':
   pull_request:
@@ -142,18 +126,19 @@ jobs:
     # NOTE: -> ✅ works!, but does not update package.json of dev/main (target PR) only origin branch
     # NOTE: -> ❌ limited in variables (custom-fork) - not what is needed;
 
-  # -----------------------
-  # NOTE:
-  # -> test for correct project compile
-  # -> checking for possible deployment build errors
-  # -----------------------
+  # ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+  # ▓▓ NOTE:                                                                    ▓▓
+  # ▓▓ ➤ test for correct project compile                                       ▓▓
+  # ▓▓ ➤ checking for possible deployment build errors                          ▓▓
+  # ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+
   npm-build-check:
     name: NPM Build Check
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
         with:
-          ref: dev
+          ref: main
       - uses: actions/setup-node@v3
         with:
           node-version: 16.17.0
@@ -166,19 +151,22 @@ jobs:
           npm install
           npm run build
 
-  # -----------------------
-  # NOTE:
-  # -> (on valid) bumps npm version
-  # -> of (this) repository to
-  # -> a specified target;
-  # -----------------------
+  # ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+  # ▓▓ NOTE:                                                                    ▓▓
+  # ▓▓ ➤ (on valid) bumps npm version                                           ▓▓
+  # ▓▓ ➤ of (this) repository to                                                ▓▓
+  # ▓▓ ➤ a specified target;                                                    ▓▓
+  # ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+
   npm-version-bump:
     name: NPM Version Bump
     needs: npm-build-check
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-22.04
-    # [ℹ] map a step output to a job output
-    # SEE: https://docs.github.com/en/actions/using-jobs/defining-outputs-for-jobs
+    # ▓▓ NOTE:
+    # ▓▓ map a step output to a job output
+    # ▓▓ SEE:
+    # ▓▓ https://docs.github.com/en/actions/using-jobs/defining-outputs-for-jobs
     outputs:
       output1: ${{ steps.step1.outputs.bump_version_bool }}
       output2: ${{ steps.set-version.outputs.release_tag }}
@@ -244,11 +232,12 @@ jobs:
           echo $RELEASE_VERSION
           echo ${{ steps.set-version.outputs.release_tag }}
 
-  # -----------------------
-  # NOTE:
-  # -> "hard" reset of origin/main repository
-  # -> after successfull PR to (->) main;
-  # -----------------------
+  # ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+  # ▓▓ NOTE:                                                                    ▓▓
+  # ▓▓ ➤ "hard" reset of origin/main repository                                 ▓▓
+  # ▓▓ ➤ after successfull PR to (->) main;                                     ▓▓
+  # ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+
   dev-branch-reset:
     name: Git Reset Dev
     needs: npm-version-bump
@@ -270,7 +259,7 @@ jobs:
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         run: |
-          # IMPORTANT
+          # ▓▓ IMPORTANT
           git fetch
           git checkout main
           git pull origin main
@@ -278,27 +267,59 @@ jobs:
           git reset --hard main
           git push --force origin dev
 
-  # -----------------------
-  # NOTE:
-  # -> creates a release for (this) repository
-  # -> after successfull bump;
-  # -> dependent on "npm-version-bump"
-  # -----------------------
+  # ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+  # ▓▓ NOTE:                                                                    ▓▓
+  # ▓▓ ➤ creates a release for (this) repository                                ▓▓
+  # ▓▓ ➤ after successfull bump;                                                ▓▓
+  # ▓▓ ➤ dependent on "npm-version-bump"                                        ▓▓
+  # ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+
   create-release:
     name: Git Create Release
     needs: npm-version-bump
     if: needs.npm-version-bump.outputs.output1 == 'true'
-    # (alternative) [#1]
+    # ▓▓ (alternative) [#1]
     env:
       RELEASE_TAG: ${{ needs.npm-version-bump.outputs.output2 }}
     runs-on: ubuntu-22.04
     steps:
       - uses: "marvinpinto/action-automatic-releases@latest"
-        # see: https://github.com/marketplace/actions/automatic-releases
+        # ▓▓ SEE:
+        # ▓▓ https://github.com/marketplace/actions/automatic-releases
         with:
           automatic_release_tag: "v${{ env.RELEASE_TAG }}"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
+
+  # ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+  # ▓▓ NOTE:                                                                    ▓▓
+  # ▓▓ ➤ deploys target MAIN                                                    ▓▓
+  # ▓▓ ➤ after successfull "bump" & "release";                                  ▓▓
+  # ▓▓ ➤ dependent on "create-release"                                          ▓▓
+  # ▓▓ ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
+
+  sentry-sourcemap-deploy:
+    name: Sentry Sourcemap (Artifacts) Upload
+    needs: create-release
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: main
+        env:
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16.17.0
+      - name: 'setup npm version'
+        run: |
+          npm install -g npm@8.19.1
+      - name: 'create .env'
+        run: |
+          echo ${{ secrets.ENV_FILE }} | base64 -d > .env
+      - name: sentry upload sourcemap
+        run: |
+          make sentry-sourcemaps-upload
 
   # -----------------------
   # NOTE: [STASHED]
