--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"node": "16.17.0"
 	},
 	"scripts": {
+		"prepare": "is-ci || husky install",
 		"start": "node build/index.js",
 		"build": "cross-env NODE_OPTIONS=--max_old_space_size=4096 VITE_SCORES_PKG_VERSION=v.$(npm pkg get version --workspaces=false | tr -d \\\") VITE_SCORES_LIB_PKG_VERSION=v.$(npm info @betarena/scores-lib version | tr -d \\\") VITE_SENTRY_UPLOAD_SOURCEMAPS=true vite build",
 		"build-2": "cross-env NODE_OPTIONS=--max_old_space_size=4096 VITE_SCORES_PKG_VERSION=v.$(npm pkg get version --workspaces=false | tr -d \\\") VITE_SCORES_LIB_PKG_VERSION=v.$(npm info @betarena/scores-lib version | tr -d \\\") VITE_SENTRY_UPLOAD_SOURCEMAPS=true vite build",
@@ -76,6 +77,8 @@
 		"xml-formatter": "^2.6.1"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^17.8.0",
+		"@commitlint/config-conventional": "^17.8.0",
 		"@playwright/test": "^1.36.1",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.22.3",
@@ -86,10 +89,12 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
 		"cross-env": "^7.0.3",
+		"husky": "^8.0.3",
 		"cypress": "^12.17.1",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"is-ci": "^3.0.1",
 		"jsdom": "^22.1.0",
 		"node-fetch": "^3.3.1",
 		"prettier": "^2.8.8",
