--- a/package.json
+++ b/package.json
@@ -88,9 +88,11 @@
 		"@types/ua-parser-js": "^0.7.36",
 		"@typescript-eslint/eslint-plugin": "^5.59.1",
 		"@typescript-eslint/parser": "^5.59.1",
+		"conventional-changelog-cli": "^4.1.0",
 		"cross-env": "^7.0.3",
 		"husky": "^8.0.3",
 		"cypress": "^12.17.1",
+		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^8.39.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte": "^2.30.0",
@@ -108,5 +110,10 @@
 		"vite": "^4.4.4",
 		"vite-plugin-compression": "^0.5.1",
 		"vitest": "^0.33.0"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
 	}
 }
