chore(eslint): initialize
add EsLint for project, including package.json and `.vscode/settings.json` update for `auto-fix` on
save EsLint detected issues.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,5 +74,15 @@
     "profile": "Layout",
     "tablet": "Mobile",
     "loaders": "Theme"
-  }
+  },
+  // "eslint.enable": true,
+  // "eslint.validate": ["javascript", "javascriptreact", "svelte"]
+  "eslint.codeActionsOnSave": false,
+  "eslint.validate": [
+      "javascript",
+        "javascriptreact",
+       "svelte"
+    ],
+    "eslint.enable": true
+
 }
