--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
 		"@sentry/tracing": "^7.49.0",
 		"@types/node": "^20.8.5",
 		"@walletconnect/web3-provider": "^1.8.0",
+		"@web3modal/ethers5": "^3.3.2",
 		"colorthief": "^2.4.0",
 		"compression": "^1.7.4",
 		"cookie": "^0.5.0",
 		"device-detector-js": "^3.0.3",
 		"dotenv": "^16.3.1",
 		"email-validator": "^2.0.4",
+		"ethers": "^5.7.2",
 		"express": "^4.17.3",
 		"express-sslify": "^1.2.0",
 		"firebase": "^9.20.0",
